; ModuleID = '/home/carl/AnghaBench/nginx/src/mail/extr_ngx_mail_imap_handler.c_ngx_mail_imap_init_session.c'
source_filename = "/home/carl/AnghaBench/nginx/src/mail/extr_ngx_mail_imap_handler.c_ngx_mail_imap_init_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_13__ = type { i32, %struct.TYPE_14__* }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_12__ = type { i32 }

@ngx_mail_core_module = common dso_local global i32 0, align 4
@imap_greeting = common dso_local global i32 0, align 4
@ngx_mail_imap_init_protocol = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_mail_imap_init_session(%struct.TYPE_11__* %0, %struct.TYPE_13__* %1) #0 {
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  store %struct.TYPE_13__* %1, %struct.TYPE_13__** %4, align 8
  %6 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %7 = load i32, i32* @ngx_mail_core_module, align 4
  %8 = call %struct.TYPE_12__* @ngx_mail_get_module_srv_conf(%struct.TYPE_11__* %6, i32 %7)
  store %struct.TYPE_12__* %8, %struct.TYPE_12__** %5, align 8
  %9 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %9, i32 0, i32 0
  %11 = load i32, i32* @imap_greeting, align 4
  %12 = call i32 @ngx_str_set(i32* %10, i32 %11)
  %13 = load i32, i32* @ngx_mail_imap_init_protocol, align 4
  %14 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %14, i32 0, i32 1
  %16 = load %struct.TYPE_14__*, %struct.TYPE_14__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %16, i32 0, i32 0
  store i32 %13, i32* %17, align 4
  %18 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %18, i32 0, i32 1
  %20 = load %struct.TYPE_14__*, %struct.TYPE_14__** %19, align 8
  %21 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @ngx_add_timer(%struct.TYPE_14__* %20, i32 %23)
  %25 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %25, i32 0, i32 1
  %27 = load %struct.TYPE_14__*, %struct.TYPE_14__** %26, align 8
  %28 = call i64 @ngx_handle_read_event(%struct.TYPE_14__* %27, i32 0)
  %29 = load i64, i64* @NGX_OK, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %2
  %32 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %33 = call i32 @ngx_mail_close_connection(%struct.TYPE_13__* %32)
  br label %34

34:                                               ; preds = %31, %2
  %35 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @ngx_mail_send(i32 %37)
  ret void
}

declare dso_local %struct.TYPE_12__* @ngx_mail_get_module_srv_conf(%struct.TYPE_11__*, i32) #1

declare dso_local i32 @ngx_str_set(i32*, i32) #1

declare dso_local i32 @ngx_add_timer(%struct.TYPE_14__*, i32) #1

declare dso_local i64 @ngx_handle_read_event(%struct.TYPE_14__*, i32) #1

declare dso_local i32 @ngx_mail_close_connection(%struct.TYPE_13__*) #1

declare dso_local i32 @ngx_mail_send(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
